# lyra-seed

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  lyra.config.example.json  lyra.config.json
backend/: blabla.py  poem.md  pyproject.toml  system.md  usage.md
backend/src/agent_platform/: __init__.py
backend/src/agent_platform/api/: _deps.py  config_routes.py  knowledge_routes.py  macro_routes.py  main.py  memory_routes.py  message_routes.py  observation_routes.py  routes.py  skill_routes.py  template_routes.py  ws_routes.py
backend/src/agent_platform/core/: config.py  models.py  platform_config.py  runtime.py  strategy.py  utils.py
backend/src/agent_platform/db/: repository.py  sqlite_agent_repo.py  sqlite_conversation_repo.py  sqlite_macro_repo.py  sqlite_message_repo.py  vector_store.py
backend/src/agent_platform/knowledge/: chunker.py  store.py  tools.py
backend/src/agent_platform/llm/: embeddings.py  models.py  openrouter.py  openrouter_embeddings.py  provider.py  retry.py
backend/src/agent_platform/memory/: chroma_memory_store.py  context_manager.py  decay.py  extractor.py  fake_embeddings.py  memory_tools.py  models.py  summarizer.py  token_estimator.py
backend/src/agent_platform/observation/: cost_tracker.py  event_bus.py  events.py  in_process_event_bus.py  sqlite_event_store.py
backend/src/agent_platform/orchestration/: decomposer.py  models.py  (+3 more)
backend/tests/: conftest.py
backend/tests/smoke/: conftest.py  test_v1_phase_0.py  test_v1_phase_1.py  test_v1_phase_2.py  test_v1_phase_3.py  test_v1_phase_4.py  test_v1_phase_5.py  test_v1_phase_6.py  test_v1_phase_7.py  test_v2_phase_1.py  test_v2_phase_2.py  test_v2_phase_3.py  test_v2_phase_4.py  test_v2_phase_6.py  test_v2_phase_7.py  test_v3_phase_1.py  test_v3_phase_2.py  test_v3_phase_4.py  test_v4_phase_1.py  test_v4_phase_2.py  test_v4_phase_3.py
work/coder/prime-cli-writer/: .coverage  Justfile  README.md  README.md.backup.1775151456179  pyproject.toml  pyproject.toml.backup.1775151421865
(+244 files in other folders)
