[project]
name = "prime-cli-writer"
version = "0.1.0"
description = "CLI tool that generates the first N prime numbers and writes them to a file."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Lyra Build Agent" }]
dependencies = []

[project.scripts]
prime-cli-writer = "prime_cli_writer.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<0.7",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prime_cli_writer --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = true
